done the structure

--- a/index.html
+++ b/index.html
@@ -9,10 +9,29 @@
     <script src='main.js'></script>
 </head>
 <header>
-    <p>Discover hidden places in the world around you</p>
+    <p id="top">Discover hidden places in the world around you</p>
 </header>
+<nav>
+    <p><a href="#">Download Excursion (Coming soon)</a></p>
+</nav>
 <body>
-    
+    <div class="home-video">
+    <video src="/resources/videos/excursion.mp4"></video>
+    </div>
+    <h2 id='video-caption'>Your personal travel guide</h2>
+    <p id='excursion-description'>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <img src="/resources/images/camp.webp" alt="image of a camp in desert">
+    <img src="/resources/images/phone.webp" alt="cellphone-logo">
+    <h2 id="arrival-date-text">
+        Coming Soon for iPhone and Android
+    </h2>
+    <p>
+       <a href="#top">Download Excursion (Comng soon!) </a>
+    </p>
     
 </body>
+
+<footer>
+    <p>Copyright Excursion </p> 
+</footer>
 </html>
