--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Excursion</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='/resources/css/style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='resources\css\style.css'>
     <script src='main.js'></script>
 </head>
 <header>
@@ -16,17 +16,21 @@
 </nav>
 <body>
     <div class="home-video">
-    <video src="/resources/videos/excursion.mp4"></video>
+    <video src="resources\videos\excursion.mp4"></video>
     </div>
     <h2 id='video-caption'>Your personal travel guide</h2>
     <p id='excursion-description'>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <img src="/resources/images/camp.webp" alt="image of a camp in desert">
-    <img src="/resources/images/phone.webp" alt="cellphone-logo">
+    <div >
+        <img src="resources\images\camp.webp" alt="image of a camp in desert">
+    </div><br>
+    <div >
+    <img src="resources\images\phone.webp" alt="cellphone-logo">
+    </div>
     <h2 id="arrival-date-text">
         Coming Soon for iPhone and Android
     </h2>
     <p>
-       <a href="#top">Download Excursion (Comng soon!) </a>
+       <a href="#top">Download Excursion (Coming soon!) </a>
     </p>
     
 </body>
