Front Sample finished

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     <p><a href="#">Download Excursion (Coming soon)</a></p>
 </nav>
 <body>
+
     <div class="home-video">
-    <video src="resources\videos\excursion.mp4"></video>
+        <video autoplay muted loop>
+            <source src="resources/videos/excursion.mp4" type="video/mp4">
+          </video>
     </div>
     <h2 id='video-caption'>Your personal travel guide</h2>
     <p id='excursion-description'>Excursion remembers places you like, and recommends new points of interest around you.</p>
@@ -32,10 +35,10 @@
     <p>
        <a href="#top">Download Excursion (Coming soon!) </a>
     </p>
-    
+
 </body>
 
 <footer>
-    <p>Copyright Excursion </p> 
+    <p>&copy; Excursion </p> 
 </footer>
 </html>
